--- a/EmotionRecognitionUI/EmotionRecognitionUI/Views/MainView.axaml
+++ b/EmotionRecognitionUI/EmotionRecognitionUI/Views/MainView.axaml
@@ -8,12 +8,6 @@
              x:Class="EmotionRecognitionUI.Views.MainView"
              Foreground="White"
              Background="#171C2C">
-    <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
-         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-    <viewModels:MainViewModel />
-    
-  </Design.DataContext>
     
     
         
@@ -58,6 +52,9 @@
                     <ContentControl.DataTemplates>
                         <DataTemplate DataType="{x:Type viewModels:HomeViewModel}">
                             <pages:HomePage/>
+                        </DataTemplate>
+                        <DataTemplate DataType="{x:Type viewModels:TrainingViewModel}">
+                            <pages:TrainingPage/>
                         </DataTemplate>
                     </ContentControl.DataTemplates>
                 </ContentControl>
