added description page and some fixed

--- a/EmotionRecognitionUI/EmotionRecognitionUI/Pages/GamePage.axaml
+++ b/EmotionRecognitionUI/EmotionRecognitionUI/Pages/GamePage.axaml
@@ -21,11 +21,11 @@
     
     <Grid RowDefinitions="* 1.5* Auto">
         <TextBlock Grid.Row="0" Text="{Binding Scoring}" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
-        <StackPanel Grid.Row="1" Spacing="5" Width="200">
+        <StackPanel Grid.Row="1" Spacing="5" Width="315">
             <Border CornerRadius="10" ClipToBounds="True">
-                <Panel Background="#7FFF22DD">
-                    <Image Width="200" Stretch="Uniform" Source="{Binding Image}" />
-                    <Panel Height="200" Background="#171C2C" IsVisible="{Binding Image, Converter={x:Static ObjectConverters.IsNull}}">
+                <Panel Background="#171C2C">
+                    <Image Width="315" Height="275" Stretch="Uniform" Source="{Binding Image}" />
+                    <Panel Width="315" Height="275" Background="#171C2C" IsVisible="{Binding Image, Converter={x:Static ObjectConverters.IsNull}}">
                         <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Данные загружаются"></TextBlock>
                     </Panel>
                 </Panel>
