--- a/EmotionRecognitionUI/EmotionRecognitionUI/Pages/MenuItem.axaml
+++ b/EmotionRecognitionUI/EmotionRecognitionUI/Pages/MenuItem.axaml
@@ -10,6 +10,7 @@
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    Foreground="#2596be"
+                   TextWrapping="WrapWithOverflow"
         /> 
     </Grid>
 
