--- a/EmotionRecognitionUI/EmotionRecognitionUI/Views/MainView.axaml
+++ b/EmotionRecognitionUI/EmotionRecognitionUI/Views/MainView.axaml
@@ -56,6 +56,9 @@
                         <DataTemplate DataType="{x:Type viewModels:TrainingViewModel}">
                             <pages:TrainingPage/>
                         </DataTemplate>
+                        <DataTemplate DataType="{x:Type viewModels:DescriptionViewModel}">
+                            <pages:DescriptionPage/>
+                        </DataTemplate>
                     </ContentControl.DataTemplates>
                 </ContentControl>
             </Grid>
