--- a/EmotionRecognitionUI/EmotionRecognitionUI/Pages/HomePage.axaml
+++ b/EmotionRecognitionUI/EmotionRecognitionUI/Pages/HomePage.axaml
@@ -7,6 +7,7 @@
     <Grid RowDefinitions="Auto * *">
         <TextBlock Grid.Row="1"  Text="{Binding Greeting}"
                    FontSize="24"
+                   Foreground="{Binding TextBoxForeground}"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    TextWrapping="Wrap"/>
